# HLS

./: .gitignore  CMakeLists.txt  Graph.cpp  Graph.h  README.md  main.cpp  parser.h
doc/: main.docx  ~$高层次综合.doc
result/: dotprod.v  output.v  tb_top.v  top.v
src/: main.cpp  output.v
src/binding/: binding.cpp  binding.h
src/data/: Graph.cpp  Graph.h  graphgroup.cpp  graphgroup.h
src/gengraph/: gengraph.cpp  gengraph.h  gengraphgroup.cpp  gengraphgroup.h
src/genrtl/: genrtl.cpp  genrtl.h
src/logger/: easylogging++.cc  log.conf
src/parser/: parser.cpp  parser.h
src/run/: hls.cpp  hls.h
src/schedule/: schedule.cpp  schedule.h
